# ChangeLog for net-misc/batmand
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/batmand/Attic/ChangeLog,v 1.7 2009/02/04 21:47:56 maekke Exp $

  04 Feb 2009; Markus Meier <maekke@gentoo.org> batmand-0.3.ebuild:
  amd64/x86 stable, bug #257650

*batmand-0.3.1 (04 Feb 2009)

  04 Feb 2009; Cédric Krier <cedk@gentoo.org> +batmand-0.3.1.ebuild:
  Version bump

  17 Jan 2009; Cédric Krier <cedk@gentoo.org> -batmand-0.2.0_rc2.ebuild,
  -batmand-0.2.0.ebuild, batmand-0.3.ebuild:
  Fix SRC_URI and HOMEPAGE for bug #254901 and remove old

*batmand-0.3 (11 Jul 2008)

  11 Jul 2008; Cédric Krier <cedk@gentoo.org> +batmand-0.3.ebuild:
  Version bump

  20 Feb 2008; Cédric Krier <cedk@gentoo.org> batmand-0.2.0_rc2.ebuild,
  batmand-0.2.0.ebuild:
  Add ~amd64 thanks to Patrick Grimm

*batmand-0.2.0 (23 Jun 2007)

  23 Jun 2007; Cédric Krier <cedk@gentoo.org> +batmand-0.2.0.ebuild:
  Version bump

*batmand-0.2.0_rc2 (16 Jun 2007)

  16 Jun 2007; Cédric Krier <cedk@gentoo.org> +files/batmand-conf.d,
  +files/batmand-init.d, +metadata.xml, +batmand-0.2.0_rc2.ebuild:
  New ebuild for bug #150824
