@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/batmand
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/batmand/Attic/ChangeLog,v 1.7 2009/02/04 21:47:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/batmand/Attic/ChangeLog,v 1.8 2009/11/15 14:55:25 cedk Exp $
+
+*batmand-0.3.2 (15 Nov 2009)
+
+  15 Nov 2009; Cédric Krier <cedk@gentoo.org> +batmand-0.3.2.ebuild:
+  Version bump
 
   04 Feb 2009; Markus Meier <maekke@gentoo.org> batmand-0.3.ebuild:
   amd64/x86 stable, bug #257650
